--- a/modules/integration/tests-integration/pom.xml
+++ b/modules/integration/tests-integration/pom.xml
@@ -20,207 +20,6 @@
         <!--<module>tests</module>-->
     </modules>
 
-    <!--<build>-->
-        <!--<plugins>-->
-            <!--<plugin>-->
-                <!--<artifactId>maven-surefire-plugin</artifactId>-->
-                <!--<inherited>false</inherited>-->
-                <!--<version>2.12.3</version>-->
-                <!--<configuration>-->
-                    <!--<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>-->
-                    <!--<suiteXmlFiles>-->
-                        <!--<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>-->
-                    <!--</suiteXmlFiles>-->
-                    <!--<systemProperties>-->
-                        <!--<property>-->
-                            <!--<name>maven.test.haltafterfailure</name>-->
-                            <!--<value>false</value>-->
-                        <!--</property>-->
-                        <!--<property>-->
-                            <!--<name>java.io.tmpdir</name>-->
-                            <!--<value>${basedir}/target/</value>-->
-                        <!--</property>-->
-                        <!--<property>-->
-                            <!--<name>carbon.zip</name>-->
-                            <!--<value>-->
-                                <!--${basedir}/../../distribution/target/wso2is-${project.version}.zip-->
-                            <!--</value>-->
-                        <!--</property>-->
-                        <!--<property>-->
-                            <!--<name>samples.dir</name>-->
-                            <!--<value>${basedir}/../../samples/product</value>-->
-                        <!--</property>-->
-                        <!--<property>-->
-                            <!--<name>framework.resource.location</name>-->
-                            <!--<value>-->
-                                <!--${basedir}/src/test/resources/-->
-                            <!--</value>-->
-                        <!--</property>-->
-                        <!--<property>-->
-                            <!--<name>usedefaultlisteners</name>-->
-                            <!--<value>false</value>-->
-                        <!--</property>-->
-                        <!--<sec.verifier.dir>${basedir}/target/security-verifier/</sec.verifier.dir>-->
-                        <!--<emma.home>${basedir}/target/emma</emma.home>-->
-                        <!--<instr.file>${basedir}/src/test/resources/instrumentation.txt</instr.file>-->
-                        <!--<filters.file>${basedir}/src/test/resources/filters.txt</filters.file>-->
-                        <!--<emma.output>${basedir}/target/emma</emma.output>-->
-                    <!--</systemProperties>-->
-
-                    <!--<workingDirectory>${basedir}/target</workingDirectory>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-clean-plugin</artifactId>-->
-                <!--<version>2.5</version>-->
-                <!--<configuration>-->
-                    <!--<filesets>-->
-                        <!--<fileset>-->
-                            <!--<directory>${basedir}/src/test/resources/client/modules</directory>-->
-                            <!--<includes>-->
-                                <!--<include>**/*.mar</include>-->
-                            <!--</includes>-->
-                            <!--<followSymlinks>false</followSymlinks>-->
-                        <!--</fileset>-->
-                    <!--</filesets>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-
-            <!--<plugin>-->
-                <!--<artifactId>maven-dependency-plugin</artifactId>-->
-                <!--<executions>-->
-
-                    <!--<execution>-->
-                        <!--<id>copy-emma-dependencies</id>-->
-                        <!--<phase>compile</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>copy-dependencies</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<outputDirectory>${project.build.directory}/emma</outputDirectory>-->
-                            <!--<includeTypes>jar</includeTypes>-->
-                            <!--<includeArtifactIds>emma,org.wso2.carbon.automation.core-->
-                            <!--</includeArtifactIds>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>copy-jar-dependencies</id>-->
-                        <!--<phase>compile</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>copy-dependencies</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<outputDirectory>${basedir}/src/test/resources/artifacts/IS/jar-->
-                            <!--</outputDirectory>-->
-                            <!--<includeTypes>jar</includeTypes>-->
-                            <!--<includeArtifactIds>mysql-connector-java-->
-                            <!--</includeArtifactIds>-->
-                            <!--<excludeTransitive>true</excludeTransitive>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>copy-secVerifier</id>-->
-                        <!--<phase>compile</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>copy-dependencies</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<outputDirectory>${basedir}/target/security-verifier</outputDirectory>-->
-                            <!--<includeTypes>aar</includeTypes>-->
-                            <!--<includeArtifactIds>SecVerifier</includeArtifactIds>-->
-                            <!--<stripVersion>true</stripVersion>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-
-                    <!--<execution>-->
-                        <!--<id>unpack-mar-jks</id>-->
-                        <!--<phase>compile</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>unpack</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<artifactItems>-->
-                                <!--<artifactItem>-->
-                                    <!--<groupId>org.wso2.identity</groupId>-->
-                                    <!--<artifactId>wso2is</artifactId>-->
-                                    <!--<version>${project.version}</version>-->
-                                    <!--<type>zip</type>-->
-                                    <!--<overWrite>true</overWrite>-->
-                                    <!--<outputDirectory>${basedir}/target/tobeCopied/</outputDirectory>-->
-                                    <!--<includes>**/*.jks,**/*.mar</includes>-->
-                                <!--</artifactItem>-->
-                            <!--</artifactItems>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-jar-plugin</artifactId>-->
-                <!--<version>2.4</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<goals>-->
-                            <!--<goal>test-jar</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-
-            <!--<plugin>-->
-                <!--<artifactId>maven-resources-plugin</artifactId>-->
-                <!--<version>2.6</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>copy-resources-jks</id>-->
-                        <!--<phase>compile</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>copy-resources</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<outputDirectory>${basedir}/src/test/resources/keystores/products-->
-                            <!--</outputDirectory>-->
-                            <!--<resources>-->
-                                <!--<resource>-->
-                                    <!--<directory>-->
-                                        <!--${basedir}/target/tobeCopied/wso2is-${project.version}/repository/resources/security/-->
-                                    <!--</directory>-->
-                                    <!--<includes>-->
-                                        <!--<include>**/*.jks</include>-->
-                                    <!--</includes>-->
-                                <!--</resource>-->
-                            <!--</resources>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>copy-resources-mar</id>-->
-                        <!--<phase>compile</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>copy-resources</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<outputDirectory>${basedir}/src/test/resources/client/modules-->
-                            <!--</outputDirectory>-->
-                            <!--<resources>-->
-                                <!--<resource>-->
-                                    <!--<directory>-->
-                                        <!--${basedir}/target/tobeCopied/wso2is-${project.version}/repository/deployment/client/modules-->
-                                    <!--</directory>-->
-                                    <!--<includes>-->
-                                        <!--<include>**/*.mar</include>-->
-                                    <!--</includes>-->
-                                <!--</resource>-->
-                            <!--</resources>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-        <!--</plugins>-->
-    <!--</build>-->
->>>>>>> 4b7d0858ed343b835ce1cd1f54dc2286e5313066
-
     <dependencies>
         <dependency>
             <groupId>org.wso2.carbon.automation</groupId>
@@ -235,39 +34,20 @@
             <artifactId>org.wso2.carbon.automation.test.utils</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.automationutils</groupId>
             <artifactId>org.wso2.carbon.integration.common.admin.client</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.automationutils</groupId>
             <artifactId>org.wso2.carbon.integration.common.utils</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.automationutils</groupId>
             <artifactId>org.wso2.carbon.integration.common.extensions</artifactId>
-            <version>4.3.0-SNAPSHOT</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.integration.common.tests</artifactId>
-            <version>4.3.0-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.identity.application.mgt.stub</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.idp.mgt.stub</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.identity</groupId>
-            <artifactId>org.wso2.identity.integration.common.clients</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
@@ -286,17 +66,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.wso2.identity</groupId>
-            <artifactId>org.wso2.identity.integration.common.utils</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.scim.common.stub</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.user.store.configuration.stub</artifactId>
             <scope>test</scope>
         </dependency>
@@ -306,13 +81,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.um.ws.api</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon.automation</groupId>
-            <artifactId>org.wso2.carbon.automation.core</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
