Fixing integration test module IS - excluding integration ui test module

--- a/modules/integration/pom.xml
+++ b/modules/integration/pom.xml
@@ -34,7 +34,7 @@
     <modules>
         <module>tests-common</module>
         <module>tests-integration</module>
-        <module>tests-ui-integration</module>
+        <!--<module>tests-ui-integration</module>-->
         <!--<module>tests</module>-->
     </modules>
     <build>
