--- a/modules/samples/pom.xml
+++ b/modules/samples/pom.xml
@@ -36,10 +36,10 @@
         <module>scim</module>
         <module>oauth</module>
         <module>oauth2</module>
-        <module>sso</module>
-	<module>xacml</module>
-	<module>sts</module>
-	<module>passive-sts</module>
+        <!--<module>sso</module>-->
+	<!--<module>xacml</module>-->
+	<!--<module>sts</module>-->
+	<!--<module>passive-sts</module>-->
     </modules>
 
 </project>
