--- a/pom.xml
+++ b/pom.xml
@@ -548,7 +548,7 @@
 		<module>modules/distribution</module>
 		<module>modules/styles</module>
 		<module>modules/dashboard</module>
-		<!--<module>modules/samples</module>-->
+		<module>modules/samples</module>
 		<module>modules/integration</module>
 	</modules>
 
@@ -859,6 +859,11 @@
                 <artifactId>gdata-core</artifactId>
                 <version>${gdata.core.wso2.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.common.wso2</groupId>
+                <artifactId>google-collect</artifactId>
+                <version>1.0.0.wso2v2</version>
+            </dependency>
 			<dependency>
 				<groupId>org.apache.axis2.wso2</groupId>
 				<artifactId>axis2-jibx</artifactId>
@@ -1062,16 +1067,6 @@
                 <groupId>xerces</groupId>
                 <artifactId>xml-apis</artifactId>
                 <version>${xml.apis.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.wso2.charon</groupId>
-                <artifactId>org.wso2.charon.core</artifactId>
-                <version>${charon.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.httpcomponents.wso2</groupId>
-                <artifactId>httpclient</artifactId>
-                <version>${orbit.version.commons.httpclient}</version>
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.identity</groupId>
@@ -3222,7 +3217,7 @@
 			<dependency>
 				<groupId>org.wso2.charon</groupId>
 				<artifactId>org.wso2.charon.core</artifactId>
-				<version>${wso2.charon.version}</version>
+				<version>${charon.orbit.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wink</groupId>
@@ -3256,6 +3251,16 @@
 				<version>${apache.openejb.version}</version>
 				<scope>test</scope>
 			</dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents.wso2</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${orbit.version.commons.httpclient}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.axis2.wso2</groupId>
+                <artifactId>axis2-client</artifactId>
+                <version>${axis2.client.version}</version>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -3394,12 +3399,13 @@
         <axiom.wso2.version>1.2.11.wso2v5</axiom.wso2.version>
 		<carbon.automation.version>4.3.1</carbon.automation.version>
 		<carbon.automationutils.version>4.3.0</carbon.automationutils.version>
-		<wso2.charon.version>2.0.0</wso2.charon.version>
+		<charon.orbit.version>2.0.0-wso2v2</charon.orbit.version>
 		<apache.wink.version>1.1.3-incubating</apache.wink.version>
 		<apache.ws.security.version>1.6.9</apache.ws.security.version>
 		<javax.servlet.version>2.5</javax.servlet.version>
 		<slf4j.version>1.7.0</slf4j.version>
 		<apache.openejb.version>4.5.2</apache.openejb.version>
+        <axis2.client.version>1.6.1.wso2v11</axis2.client.version>
 		<project.scm.id>my-scm-server</project.scm.id>
     </properties>
 
