--- a/modules/samples/user-mgt/pom.xml
+++ b/modules/samples/user-mgt/pom.xml
@@ -33,7 +33,7 @@
 
     <modules>
         <module>remote-user-mgt</module>
-        <module>SampleCustomeUserStoreManager</module>
+        <!--<module>SampleCustomeUserStoreManager</module>-->
     </modules>
 
 </project>
