--- a/modules/samples/passive-sts/passive-sts-client/PassiveSTSFilter/pom.xml
+++ b/modules/samples/passive-sts/passive-sts-client/PassiveSTSFilter/pom.xml
@@ -5,16 +5,15 @@
 
     <parent>
         <groupId>org.wso2.is</groupId>
-        <artifactId>wso2is-identity-samples-passivests</artifactId>
+        <artifactId>PassiveSTSSample</artifactId>
         <version>5.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.wso2.identity.passivests.filter</artifactId>
-    <version>4.3.1</version>
     <packaging>jar</packaging>
-    
+
     <repositories>
         <repository>
             <id>wso2-nexus</id>
