--- a/pom.xml
+++ b/pom.xml
@@ -714,7 +714,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.18</version>
 			</plugin>
 			<plugin>
 				<inherited>false</inherited>
@@ -969,9 +969,7 @@
                 <groupId>org.wso2.carbon</groupId>
                 <artifactId>org.wso2.carbon.authenticator.stub</artifactId>
                 <version>${carbon.kernel.version}</version>
-                <scope>test</scope>
             </dependency>
-
             <dependency>
                 <groupId>org.wso2.carbon.identity</groupId>
                 <artifactId>org.wso2.carbon.identity.oauth</artifactId>
@@ -1034,9 +1032,9 @@
                 <version>${version.commons.logging}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.identity</groupId>
+                <groupId>org.wso2.is</groupId>
                 <artifactId>org.wso2.identity.passivests.filter</artifactId>
-                <version>${carbon.identity.version}</version>
+                <version>${product.identity.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.ws.commons.axiom</groupId>
