--- a/modules/samples/openid/openid-client/pom.xml
+++ b/modules/samples/openid/openid-client/pom.xml
@@ -1,10 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <parent>
+        <groupId>org.wso2.is</groupId>
+        <artifactId>wso2is-identity-samples-openid</artifactId>
+        <version>5.1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.wso2.samples</groupId>
 	<artifactId>openidclient</artifactId>
 	<packaging>war</packaging>
-	<version>5.0.0</version>
 	<name>OpenID Client App for the WSO2 Identity Server</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
