--- a/pom.xml
+++ b/pom.xml
@@ -727,11 +727,6 @@
                 <type>zip</type>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon</groupId>
-                <artifactId>org.wso2.carbon.core.ui.feature</artifactId>
-                <version>${carbon.kernel.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.wso2.identity</groupId>
                 <artifactId>org.wso2.stratos.identity.dashboard.ui</artifactId>
                 <version>${stratos.version.221}</version>
@@ -1046,7 +1041,7 @@
         <google.collect.wso2.version>1.0.0.wso2v1</google.collect.wso2.version>
         <junit.version>3.8.1</junit.version>
 		<carbon.kernel.version>4.3.0</carbon.kernel.version>
-        <carbon.commons.version>4.3.3</carbon.commons.version>
+        <carbon.commons.version>4.3.6-SNAPSHOT</carbon.commons.version>
 		<carbon.p2.plugin.version>1.5.3</carbon.p2.plugin.version>
 		<orbit.version.axiom>1.2.11.wso2v5</orbit.version.axiom>
         <oauth2.client.version>0.22.1358727-wso2v8-SNAPSHOT</oauth2.client.version>
@@ -1087,7 +1082,7 @@
         <testng.version>6.1.1</testng.version>
         <carbon.deployment.version>4.3.1</carbon.deployment.version>
         <carbon.registry.version>4.3.0</carbon.registry.version>
-        <carbon.multitenancy.version>4.3.3</carbon.multitenancy.version>
+        <carbon.multitenancy.version>4.3.5-SNAPSHOT</carbon.multitenancy.version>
         <jaggery.extensions.version>1.2.0</jaggery.extensions.version>
         <axis2.jibx.wso2.version>1.6.1.wso2v11</axis2.jibx.wso2.version>
         <axis2.jaxb.wso2.version>1.6.1.wso2v11</axis2.jaxb.wso2.version>
