--- a/modules/integration/tests-ui-integration/pom.xml
+++ b/modules/integration/tests-ui-integration/pom.xml
@@ -279,7 +279,7 @@
         <dependency>
             <groupId>org.wso2.is</groupId>
             <artifactId>org.wso2.identity.integration.ui.pages</artifactId>
-            <version>${project.version}</version>
+            <version>${product.identity.version}</version>
         </dependency>
     </dependencies>
 
